refactor: Aplica princípios de Clean Code e DDD no projeto
Este commit refatora a base de código para melhorar a legibilidade,
manutenibilidade e alinhamento com os princípios de Domain-Driven
Design (DDD) e Clean Code.

As principais mudanças são:

- **Mover Lógica para o Domínio:**
  A lógica de débito da transferência, que estava no `ContaServiceDomain`
  com um `instanceof`, foi movida para um método polimórfico
  `debitarParaTransferencia` nas entidades `ContaCorrente` e `ContaPoupanca`.
  Isso torna o serviço mais enxuto e as entidades mais inteligentes.

- **Eliminar Duplicação (DRY):**
  A lógica de criação de instâncias de `Conta` foi extraída para um
  método fábrica privado no `ClienteService`, eliminando a repetição de
  código entre os métodos `criarCliente` e `abrirNovaConta`.

- **Exceções Semânticas:**
  A `RuntimeException` genérica para recursos não encontrados foi
  substituída por uma exceção customizada `RecursoNaoEncontradoException`,
  permitindo que a API retorne o status HTTP 404 Not Found, que é
  semanticamente correto.