@@ -3,6 +3,7 @@ package com.senai.conta_bancaria_spring.application.service;
 import com.senai.conta_bancaria_spring.application.dto.*;
 import com.senai.conta_bancaria_spring.domain.entity.*;
 import com.senai.conta_bancaria_spring.domain.enums.TipoTransacao;
+import com.senai.conta_bancaria_spring.domain.exception.RecursoNaoEncontradoException;
 import com.senai.conta_bancaria_spring.domain.repository.ClienteRepository;
 import com.senai.conta_bancaria_spring.domain.repository.TransacaoRepository;
 import jakarta.transaction.Transactional;
@@ -34,32 +35,14 @@ public class ClienteService {
         cliente.setNome(dto.getNome());
         cliente.setCpf(dto.getCpf());
 
-        Conta novaConta;
-        long numeroConta = 100000L + new Random().nextInt(900000);
-
-        if ("Corrente".equalsIgnoreCase(dto.getTipoConta())) {
-            novaConta = ContaCorrente.builder()
-                    .numero(numeroConta)
-                    .saldo(dto.getSaldoInicial())
-                    .limite(dto.getLimite())
-                    .taxa(dto.getTaxa())
-                    .ativa(true)
-                    .build();
-        } else {
-            novaConta = ContaPoupanca.builder()
-                    .numero(numeroConta)
-                    .saldo(dto.getSaldoInicial())
-                    .rendimento(dto.getRendimento())
-                    .ativa(true)
-                    .build();
-        }
+        Conta novaConta = criarInstanciaDeConta(dto.getTipoConta(), dto.getSaldoInicial(), dto.getLimite(), dto.getTaxa(), dto.getRendimento());
 
         cliente.adicionarConta(novaConta);
         Cliente clienteSalvo = clienteRepository.save(cliente);
 
         if (dto.getSaldoInicial().compareTo(BigDecimal.ZERO) > 0) {
             Transacao transacaoInicial = new Transacao();
-            transacaoInicial.setConta(clienteSalvo.getContas().get(0));
+            transacaoInicial.setConta(clienteSalvo.getContas().getFirst());
             transacaoInicial.setTipo(TipoTransacao.ABERTURA_CONTA);
             transacaoInicial.setValor(dto.getSaldoInicial());
             transacaoRepository.save(transacaoInicial);
@@ -70,51 +53,33 @@ public class ClienteService {
 
     @Transactional
     public ContaResponseDTO abrirNovaConta(String clienteId, ContaRequestDTO dto) {
-            Cliente cliente = clienteRepository.findById(clienteId)
-                    .orElseThrow(() -> new RuntimeException("Cliente não encontrado."));
+        Cliente cliente = clienteRepository.findById(clienteId)
+                .orElseThrow(() -> new RecursoNaoEncontradoException("Cliente não encontrado com o ID: " + clienteId));
 
-            boolean contaExistente = cliente.getContas().stream()
-                    .anyMatch(conta -> conta.getClass().getSimpleName().equalsIgnoreCase(dto.getTipoConta()));
+        boolean contaExistente = cliente.getContas().stream()
+                .anyMatch(conta -> conta.getClass().getSimpleName().equalsIgnoreCase(dto.getTipoConta()));
 
-            if (contaExistente) {
-                throw new IllegalArgumentException("O cliente já possui uma conta do tipo " + dto.getTipoConta());
-            }
+        if (contaExistente) {
+            throw new IllegalArgumentException("O cliente já possui uma conta do tipo " + dto.getTipoConta());
+        }
 
-            Conta novaConta;
-            long numeroConta = 100000L + new Random().nextInt(900000);
+        Conta novaConta = criarInstanciaDeConta(dto.getTipoConta(), dto.getSaldoInicial(), dto.getLimite(), dto.getTaxa(), dto.getRendimento());
 
-            if ("Corrente".equalsIgnoreCase(dto.getTipoConta())) {
-                novaConta = ContaCorrente.builder()
-                        .numero(numeroConta)
-                        .saldo(dto.getSaldoInicial())
-                        .limite(dto.getLimite())
-                        .taxa(dto.getTaxa())
-                        .ativa(true)
-                        .build();
-            } else {
-                novaConta = ContaPoupanca.builder()
-                        .numero(numeroConta)
-                        .saldo(dto.getSaldoInicial())
-                        .rendimento(dto.getRendimento())
-                        .ativa(true)
-                        .build();
-            }
+        cliente.adicionarConta(novaConta);
 
-            cliente.adicionarConta(novaConta);
+        Cliente clienteSalvo = clienteRepository.save(cliente);
 
-            Cliente clienteSalvo = clienteRepository.save(cliente);
+        Conta contaSalva = clienteSalvo.getContas().getLast();
 
-            Conta contaSalva = clienteSalvo.getContas().getLast();
+        if (dto.getSaldoInicial().compareTo(BigDecimal.ZERO) > 0) {
+            Transacao transacaoInicial = new Transacao();
+            transacaoInicial.setConta(contaSalva);
+            transacaoInicial.setTipo(TipoTransacao.ABERTURA_CONTA);
+            transacaoInicial.setValor(dto.getSaldoInicial());
+            transacaoRepository.save(transacaoInicial);
+        }
 
-            if (dto.getSaldoInicial().compareTo(BigDecimal.ZERO) > 0) {
-                Transacao transacaoInicial = new Transacao();
-                transacaoInicial.setConta(contaSalva);
-                transacaoInicial.setTipo(TipoTransacao.ABERTURA_CONTA);
-                transacaoInicial.setValor(dto.getSaldoInicial());
-                transacaoRepository.save(transacaoInicial);
-            }
-
-            return ContaResponseDTO.fromEntity(contaSalva);
+        return ContaResponseDTO.fromEntity(contaSalva);
     }
 
     public List<ClienteResponseDTO> listarClientes() {
@@ -124,22 +89,43 @@ public class ClienteService {
     }
 
     public ClienteResponseDTO buscarClientePorId(String id) {
-        Cliente cliente = clienteRepository.findById(id).orElseThrow(() -> new RuntimeException("Cliente não encontrado."));
+        Cliente cliente = clienteRepository.findById(id).orElseThrow(() -> new RecursoNaoEncontradoException("Cliente não encontrado com o ID: " + id));
         return ClienteResponseDTO.fromEntity(cliente);
     }
 
     public void desativarCliente(String id) {
         Cliente cliente = clienteRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Cliente não encontrado."));
+                .orElseThrow(() -> new RecursoNaoEncontradoException("Cliente não encontrado com o ID: " + id));
         cliente.setAtivo(false);
         clienteRepository.save(cliente);
     }
 
     public ClienteResponseDTO atualizarCliente(String id, ClienteUpdateRequestDTO dto) {
         Cliente cliente = clienteRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Cliente não encontrado."));
+                .orElseThrow(() -> new RecursoNaoEncontradoException("Cliente não encontrado com o ID: " + id));
         cliente.setNome(dto.getNome());
         Cliente clienteAtualizado = clienteRepository.save(cliente);
         return ClienteResponseDTO.fromEntity(clienteAtualizado);
+    }
+
+    private Conta criarInstanciaDeConta(String tipoConta, BigDecimal saldoInicial, Long limite, BigDecimal taxa, BigDecimal rendimento) {
+        long numeroConta = 100000L + new Random().nextInt(900000);
+
+        if ("Corrente".equalsIgnoreCase(tipoConta)) {
+            return ContaCorrente.builder()
+                    .numero(numeroConta)
+                    .saldo(saldoInicial)
+                    .limite(limite)
+                    .taxa(taxa)
+                    .ativa(true)
+                    .build();
+        } else { // A validação do DTO já garante que será "Poupanca"
+            return ContaPoupanca.builder()
+                    .numero(numeroConta)
+                    .saldo(saldoInicial)
+                    .rendimento(rendimento)
+                    .ativa(true)
+                    .build();
+        }
     }
 }
